# workday-scraper-api

./: .coverage  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  README.md  jobs.db  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml  release.yml
app/: config.py  db.py  main.py  routes.py  scraper.py
app/scraper_pkg/: config_loader.py  institution_runner.py  scraper.py
app/scraper_pkg/config/: institutions.yaml
docs/: index.html  openapi.yaml  postman_collection.json
dotenv/: __init__.py
li_posts/: li_post_20251107.txt
requests/: __init__.py
scripts/: generate_li_post.py
tests/: conftest.py  test_db.py  test_institution_runner_fetch_error.py  test_institution_runner_locations.py  test_routes.py  test_scraper.py  test_utils.py
