[project]
name = "workday-scraper-api"
version = "0.1.0"
description = "A Flask-based API for scraping and serving job data from Workday-powered sites."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name="Jeremiah Haremza", email="contact@jeremiahharemza.com" }
]
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.git-changelog]
bump = "auto" # Set
convention = "conventional" # Set
in-place = true # Set - change to true after first run
marker-line = "<!-- insertion marker -->" # Set
output = "CHANGELOG.md" # Set
parse-refs = true # Set - can change
parse-trailers = true # Set - can change
provider = "github" # Set
repository = "." # Set
sections = ["feat", "fix", "chore", "docs", "style", "refactor", "perf", "test"] # Set
template = "keepachangelog" # Set
version-regex = "^## \\\\[(?P<version>v?[^\\\\]]+)" # Set
versioning = "semver" # Set
zerover = true # Set